# EMOSTAGRAM_chat_service

./: .gitignore  config.py  langgraph.json  pyproject.toml
app/: main.py
app/api/v1/: agent.py  chat.py  conversation.py  letta.py
core/database/: mongodb_client.py
core/memory/: letta.py
core/repositories/: conversation.py  long_term_memory.py  tool_logs.py  vector_memory.py
core/schemas/: chat.py  conversation.py
core/services/: agent_service.py  conversation.py  llm_service.py  memory_service.py  tavily_service.py
core/tools/: extract.py  search.py
infra/kafka/: producer.py
infra/kafka/consumers/: chat_message_writer.py  ltm_consumer.py
studio/: agent_graph.py
tests/: test.py
